{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 38,
  "lineage": "6f1a3447-d27d-b004-4a84-ac282cc2bdf9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/networkInterfaces/lab04s2-db1-u-vm1-nic-1",
            "internal_domain_name_suffix": "wst55wkwblzupkebbyiesfntlc.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab04s2-db1-u-vm1-ip-1",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/publicIPAddresses/lab04s2-db1-u-vm1-pip-2",
                "subnet_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet3"
              }
            ],
            "location": "canadaeast",
            "name": "lab04s2-db1-u-vm1-nic-1",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "lab04-rg2",
            "tags": {
              "ContactEmail": "ccgc5502@gmail.com",
              "Environmnet": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/networkInterfaces/lab04s2-db1-u-vm1-nic-2",
            "internal_domain_name_suffix": "wst55wkwblzupkebbyiesfntlc.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab04s2-db1-u-vm1-ip-2",
                "primary": true,
                "private_ip_address": "10.0.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/publicIPAddresses/lab04s2-db1-u-vm1-pip-1",
                "subnet_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet3"
              }
            ],
            "location": "canadaeast",
            "name": "lab04s2-db1-u-vm1-nic-2",
            "private_ip_address": "10.0.3.5",
            "private_ip_addresses": [
              "10.0.3.5"
            ],
            "resource_group_name": "lab04-rg2",
            "tags": {
              "ContactEmail": "ccgc5502@gmail.com",
              "Environmnet": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/networkSecurityGroups/lab04-nsg1",
            "location": "canadaeast",
            "name": "lab04-nsg1",
            "resource_group_name": "lab04-rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/networkSecurityGroups/lab04-nsg2",
            "location": "canadaeast",
            "name": "lab04-nsg2",
            "resource_group_name": "lab04-rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/publicIPAddresses/lab04s2-db1-u-vm1-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "lab04s2-db1-u-vm1-pip-1",
            "resource_group_name": "lab04-rg2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/publicIPAddresses/lab04s2-db1-u-vm1-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "lab04s2-db1-u-vm1-pip-2",
            "resource_group_name": "lab04-rg2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "resource_group_name": "lab04-rg2",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "resource_group_name": "lab04-rg2",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet3",
            "name": "network-subnet3",
            "resource_group_name": "lab04-rg2",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/networkSecurityGroups/lab04-nsg1",
            "subnet_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/networkSecurityGroups/lab04-nsg2",
            "subnet_id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d9ffa7b4-0a56-47f3-a881-0e104915b35a",
            "id": "/subscriptions/5ab685ad-c0ee-4b95-a5a4-cb74745aeb1f/resourceGroups/lab04-rg2/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadaeast",
            "name": "network-vnet",
            "resource_group_name": "lab04-rg2",
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}